# naev

./: .gitignore  .gitmodules  meson.build  org.naev.naev.metainfo.xml
.github/workflows/: compile_naev.yml  naev_ci.yml  naev_nightly.yml
dat/events/neutral/: insanebusinessman.lua
dat/missions/neutral/insanebusinessman/: insanebusinessman.lua  insanebusinessman2.lua  insanebusinessman3.lua
subprojects/packagefiles/sdl2_image/: meson.build
utils/: buildAppImage.sh
utils/ci/soundtrack/: soundcloud_uploader.py  uploadSoundtrack.py
utils/mkspr/: main.c  meson.build
